// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueFilingDialog componentDidUpdate dialog is not open & props have changed 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={true}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "someServiceData": null,
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog componentDidUpdate dialog is not open & props have not changed 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={true}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "differentProperty": "different_property",
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog componentDidUpdate dialog is open & props have changed 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "differentProperty": "different_property",
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog componentDidUpdate dialog is open & props have not changed 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "differentProperty": "different_property",
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog render with isSettingsValid: false 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "someServiceData": null,
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={true}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog render with isSettingsValid: true 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "someServiceData": null,
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog render: validate callback (onPropertyUpdateCallback) sent to settings container when service settings are not null 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "someServiceData": null,
        "some_property": "some_value",
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog render: validate callback (onPropertyUpdateCallback) sent to settings container when service settings are null 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "gitHub",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "some_property": "some_value",
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog render: validate callback (onSelectedServiceChange) sent to settings container 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "title": "Specify issue filing location",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "issue-filing-dialog",
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <IssueFilingSettingsContainer
    deps={
      Object {
        "issueFilingActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "source": undefined,
          "telemetryFactory": undefined,
        },
        "issueFilingServiceProvider": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "services": undefined,
        },
        "toolData": Object {
          "applicationProperties": Object {
            "environmentName": "environmentName",
            "name": "app-name",
            "version": "app-version",
          },
          "scanEngineProperties": Object {
            "name": "engine-name",
            "version": "engine-version",
          },
        },
        "userConfigMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "saveIssueFilingSettings": [Function],
          "saveWindowBounds": [Function],
          "setIssueFilingService": [Function],
          "setIssueFilingServiceProperty": [Function],
        },
      }
    }
    onPropertyUpdateCallback={[Function]}
    onSelectedServiceChange={[Function]}
    selectedIssueFilingService={
      Object {
        "getSettingsFromStoreData": [Function],
        "isSettingsValid": [Function],
        "key": "different_service",
      }
    }
    selectedIssueFilingServiceData={
      Object {
        "differentProperty": "different_property",
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;
